WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
230991
[WebXR] Hold a foreground assertion for the duration of the immersive session
https://bugs.webkit.org/show_bug.cgi?id=230991
Summary
[WebXR] Hold a foreground assertion for the duration of the immersive session
Ada Chan
Reported
2021-09-29 15:28:34 PDT
[WebXR] Hold a foreground assertion for the duration of the immersive session
Attachments
Patch
(1.89 KB, patch)
2021-09-29 15:29 PDT
,
Ada Chan
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Ada Chan
Comment 1
2021-09-29 15:29:30 PDT
Created
attachment 439670
[details]
Patch
Chris Dumez
Comment 2
2021-09-29 15:37:23 PDT
Comment on
attachment 439670
[details]
Patch r=me
EWS
Comment 3
2021-09-29 21:18:26 PDT
Committed
r283297
(
242322@main
): <
https://commits.webkit.org/242322@main
> All reviewed patches have been landed. Closing bug and clearing flags on
attachment 439670
[details]
.
Radar WebKit Bug Importer
Comment 4
2021-09-29 21:19:15 PDT
<
rdar://problem/83702713
>
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug