[WebXR] Hold a foreground assertion for the duration of the immersive session https://bugs.webkit.org/show_bug.cgi?id=230991

Patch by Ada Chan <ada.chan@apple.com> on 2021-09-29
Reviewed by Chris Dumez.

* UIProcess/XR/PlatformXRSystem.cpp:
(WebKit::PlatformXRSystem::initializeTrackingAndRendering):

Canonical link: https://commits.webkit.org/242322@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@283297 268f45cc-cd09-0410-ab3c-d52691b4dbfc