Source/WebKit/UIProcess/XR/PlatformXRSystem.cpp
@@ -79,8 +79,10 @@ void PlatformXRSystem::initializeTrackingAndRendering()
     if (!xrCoordinator)
         return;
 
-    xrCoordinator->startSession(m_page, [weakThis = makeWeakPtr(*this)](XRDeviceIdentifier deviceIdentifier) {
-        RunLoop::main().dispatch([weakThis, deviceIdentifier]() mutable {
+    auto immersiveSessionActivity = m_page.process().throttler().foregroundActivity("XR immersive session"_s);
+
+    xrCoordinator->startSession(m_page, [weakThis = makeWeakPtr(*this), immersiveSessionActivity = WTFMove(immersiveSessionActivity)](XRDeviceIdentifier deviceIdentifier) mutable {
+        RunLoop::main().dispatch([weakThis, deviceIdentifier, immersiveSessionActivity = WTFMove(immersiveSessionActivity)]() mutable {
             if (weakThis)
                 weakThis->m_page.send(Messages::PlatformXRSystemProxy::SessionDidEnd(deviceIdentifier));
         });
